2012-03-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.decls:           [Bug 3508771] load tclreg.dll in cygwin tclsh
	* generic/tclInt.decls:        Implement TclWinGetPlatformId, Tcl_WinUtfToTChar,
	* generic/tclIntPlatDecls.h:   Tcl_WinTCharToUtf (and a dummy TclWinCPUID) for 
	* generic/tclPlatDecls.h:      Cygwin, so win32 extensions using those can be
	* generic/tclStubInit.c:       loaded in the cygwin version of tclsh.
	* unix/tclUnixCompat.c:

2012-03-19  Venkat Iyer <venkat@comit.com>

	* library/tzdata/America/Atikokan: Update to tzdata2012b.
	* library/tzdata/America/Blanc-Sablon
	* library/tzdata/America/Dawson_Creek
	* library/tzdata/America/Edmonton
	* library/tzdata/America/Glace_Bay
	* library/tzdata/America/Goose_Bay
	* library/tzdata/America/Halifax
	* library/tzdata/America/Havana
	* library/tzdata/America/Moncton
	* library/tzdata/America/Montreal
	* library/tzdata/America/Nipigon
	* library/tzdata/America/Rainy_River
	* library/tzdata/America/Regina
	* library/tzdata/America/Santiago
	* library/tzdata/America/St_Johns
	* library/tzdata/America/Swift_Current
	* library/tzdata/America/Toronto
	* library/tzdata/America/Vancouver
	* library/tzdata/America/Winnipeg
	* library/tzdata/Antarctica/Casey
	* library/tzdata/Antarctica/Davis
	* library/tzdata/Antarctica/Palmer
	* library/tzdata/Asia/Yerevan
	* library/tzdata/Atlantic/Stanley
	* library/tzdata/Pacific/Easter
	* library/tzdata/Pacific/Fakaofo
	* library/tzdata/America/Creston: (new)

2012-03-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h: [Bug 3288345] Wrong Tcl_StatBuf used on Cygwin
	* unix/tclUnixFile.c
	* unix/tclUnixPort.h
	* win/cat.c:           Remove cygwin stuff no longer needed
	* win/tclWinFile.c
	* win/tclWinPort.h

2012-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c: [Bug 3388350] mingw64 compiler warnings

2012-03-07  Andreas Kupries  <andreask@activestate.com>

	* library/http/http.tcl: [Bug 3498327]: Generate upper-case