@@ -1,5 +1,15 @@
 2012-03-20  Jan Nijtmans  <nijtmans@users.sf.net>
 
+	* generic/tclInt.decls        Revert some cygwin-related signature changes from
+	* generic/tclIntPlatDecls.h   [835f8e1e9d] (2010-02-01). They were an attempt to
+	* win/tclWinError.c           make the cygwin port compile again, but since cygwin
+	                              is based on unix this serves no purpose any more.
+	* unix/Makefile.in            Add tclWinError.c to the CYGWIN build.
+	* unix/tcl.m4
+	* unix/configure
+
+2012-03-20  Jan Nijtmans  <nijtmans@users.sf.net>
+
 	* generic/tcl.decls:           [Bug 3508771] load tclreg.dll in cygwin tclsh
 	* generic/tclInt.decls:        Implement TclWinGetPlatformId, Tcl_WinUtfToTChar,
 	* generic/tclIntPlatDecls.h:   Tcl_WinTCharToUtf (and a dummy TclWinCPUID) for 
